--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   lottie: ^1.2.1
   shared_preferences: ^2.0.12
   motion_toast: ^2.1.1
+  sqflite: ^2.0.2
+  path: ^1.8.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
