feat: rm libs not used and add libs for lauch url

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   sqflite: ^2.0.2
   path: ^1.8.0
   dio: ^4.0.4
-  shimmer: ^2.0.0
   cached_network_image: ^3.2.0
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_test:
